fixed extra space on the right of mainscroll and learned caution

--- a/assets/css/stylesv15.scss
+++ b/assets/css/stylesv15.scss
@@ -138,10 +138,10 @@ nav {
     font-weight: 700;
 }
 
-h5 {
+// h5 {
     // background: linear-gradient(180deg, rgba(255,255,255,0) 65%, #FFD0AE 65%);
     // display: inline;
-}
+// }
 
 // CONTACT PAGE
 // #contact {
